# MobileAi

./: .gitignore  README.md  ULTRASOUND_DEMO.md  settings.gradle.kts
MobileAI/: local.properties
MobileAI/composeApp/src/webMain/kotlin/org/kgajjar/mobileai/: main.kt
MobileAI/iosApp/Configuration/: Config.xcconfig
MobileAI/iosApp/iosApp.xcodeproj/xcuserdata/gajjar.xcuserdatad/xcschemes/: iosApp.xcscheme
MobileAI/shared/src/commonMain/kotlin/org/kgajjar/mobileai/: Platform.kt
MobileAI/shared/src/jsMain/kotlin/org/kgajjar/mobileai/: Platform.js.kt
composeApp/: CMakeLists.txt  build.gradle.kts
composeApp/src/androidMain/kotlin/org/kgajjar/mobileai/: MainActivity.kt
composeApp/src/androidMain/kotlin/org/kgajjar/mobileai/screens/: UltrasoundScreen.android.kt
composeApp/src/androidMain/kotlin/org/kgajjar/mobileai/ultrasound/: UltrasoundNative.kt  UltrasoundRepository.kt  UltrasoundViewModel.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/kgajjar/mobileai/: App.kt
composeApp/src/commonMain/kotlin/org/kgajjar/mobileai/navigation/: NavigationItem.kt
composeApp/src/commonMain/kotlin/org/kgajjar/mobileai/screens/: HomeScreen.kt  ProfileScreen.kt  SearchScreen.kt  UltrasoundScreen.kt
composeApp/src/commonMain/kotlin/org/kgajjar/mobileai/theme/: DarkTheme.kt
composeApp/src/commonTest/kotlin/org/kgajjar/mobileai/: ComposeAppCommonTest.kt
composeApp/src/jvmMain/kotlin/org/kgajjar/mobileai/: main.kt
composeApp/src/jvmMain/kotlin/org/kgajjar/mobileai/screens/: UltrasoundScreen.jvm.kt
composeApp/src/webMain/resources/: index.html
docs/: FILE_FORMAT.md  README.md  SDK_API.md  SETUP.md
dummy_data/: frame_0000.ultra  frame_0001.ultra  frame_0002.ultra  frame_0003.ultra  frame_0004.ultra  frame_0005.ultra  frame_0006.ultra  frame_0007.ultra  frame_0008.ultra  frame_0009.ultra  frame_0010.ultra  frame_0011.ultra  frame_0012.ultra  frame_0013.ultra  frame_0014.ultra  generate_ultra_files.py
iosApp/iosApp/: ContentView.swift  HomeView.swift  ProfileView.swift  SearchView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/androidMain/kotlin/org/kgajjar/mobileai/: Platform.android.kt
shared/src/commonMain/kotlin/org/kgajjar/mobileai/: Greeting.kt
shared/src/commonTest/kotlin/org/kgajjar/mobileai/: SharedCommonTest.kt
shared/src/iosMain/kotlin/org/kgajjar/mobileai/: Platform.ios.kt
shared/src/jvmMain/kotlin/org/kgajjar/mobileai/: Platform.jvm.kt
shared/src/wasmJsMain/kotlin/org/kgajjar/mobileai/: Platform.wasmJs.kt
ultrasound_core/: CMakeLists.txt
ultrasound_core/include/: ultrasound_core.h
ultrasound_core/jni/: ultrasound_jni.cpp  ultrasound_jni.h
ultrasound_core/src/: ultrasound_core.cpp
